--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
+    "react-toastify": "^11.0.5",
     "router": "^2.2.0"
   },
   "devDependencies": {
